crates/igv-render/tests/snapshots/svg_snapshots__alignments_only_two_reads.snap
---
source: crates/igv-render/tests/svg_snapshots.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="324" viewBox="0 0 1200 324" font-family="DejaVu Sans, Liberation Sans, Helvetica, Arial, sans-serif">
<rect x="0" y="0" width="1200" height="324" fill="#ffffff"/>
<text x="12.00" y="26.00" fill="#1a1a1a" font-size="14" text-anchor="start">igv-rs snapshot</text>
<text x="1188.00" y="26.00" fill="#888888" font-size="12" text-anchor="end">chr1:1-200</text>
<line x1="80.00" y1="66.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<line x1="352.82" y1="62.00" x2="352.82" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="352.82" y="60.00" fill="#444444" font-size="10" text-anchor="middle">50</text>
<line x1="631.22" y1="62.00" x2="631.22" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="631.22" y="60.00" fill="#444444" font-size="10" text-anchor="middle">100</text>
<line x1="909.61" y1="62.00" x2="909.61" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="909.61" y="60.00" fill="#444444" font-size="10" text-anchor="middle">150</text>
<line x1="1188.00" y1="62.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="1188.00" y="60.00" fill="#444444" font-size="10" text-anchor="middle">200</text>
<text x="74.00" y="120.00" fill="#888888" font-size="10" text-anchor="end">coverage</text>
<rect x="185.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="190.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="196.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="201.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="207.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="212.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="218.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="224.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="229.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="235.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="240.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="246.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="251.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="257.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="262.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="268.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="273.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="279.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="284.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="290.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="296.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="301.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="307.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="312.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="318.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="323.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="329.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="334.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="340.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="345.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="351.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="357.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="362.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="368.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="373.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="379.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="384.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="390.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="395.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="401.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="406.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="517.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="523.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="528.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="534.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="539.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="545.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="550.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="556.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="561.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="567.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="573.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="578.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="584.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="589.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="595.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="600.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="606.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="611.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="617.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="622.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="628.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="634.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="639.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="645.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="650.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="656.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="661.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="667.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="672.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="678.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="683.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="689.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="694.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="700.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="706.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="711.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="717.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="722.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="728.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="733.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="739.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="744.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="750.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="755.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="761.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="766.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="772.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="778.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="783.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="789.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="794.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="800.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="805.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="811.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="816.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="822.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="827.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="833.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="838.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="844.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="850.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="855.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="861.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="866.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="872.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="877.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="883.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="888.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="894.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="899.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="905.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<text x="74.00" y="86.00" fill="#888888" font-size="10" text-anchor="end">max 1</text>
<text x="74.00" y="170.00" fill="#888888" font-size="10" text-anchor="end">sample.bam</text>
<polygon points="185.79,161.00 410.07,161.00 414.07,166.00 410.07,171.00 185.79,171.00" fill="#9ec3e0"/>
<polygon points="523.86,161.00 915.18,161.00 915.18,171.00 523.86,171.00 519.86,166.00" fill="#e8b6b6"/>
<rect x="519.86" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="525.43" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="530.99" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="536.56" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="542.13" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="547.70" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="553.27" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="558.83" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="564.40" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="569.97" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="575.54" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="581.11" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="586.67" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="592.24" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="597.81" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="603.38" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="608.94" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="614.51" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="620.08" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="625.65" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="631.22" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="636.78" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="642.35" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="647.92" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="653.49" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="659.06" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="664.62" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="670.19" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="675.76" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="681.33" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="686.89" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="692.46" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="698.03" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="703.60" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="709.17" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="714.73" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="720.30" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="725.87" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="731.44" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="737.01" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="742.57" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="748.14" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="753.71" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="759.28" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="764.84" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="770.41" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="775.98" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="781.55" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="787.12" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="792.68" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="798.25" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="803.82" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="809.39" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="814.95" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="820.52" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="826.09" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="831.66" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="837.23" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="842.79" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="848.36" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="853.93" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="859.50" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="865.07" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="870.63" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="876.20" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="881.77" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="887.34" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="892.90" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="898.47" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="904.04" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
<rect x="909.61" y="161.00" width="1.00" height="10.00" fill="#d62728"/>
</svg>
