crates/igv-render/tests/snapshots/svg_snapshots__annotations_only_two_transcripts.snap
---
source: crates/igv-render/tests/svg_snapshots.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="116" viewBox="0 0 1200 116" font-family="DejaVu Sans, Liberation Sans, Helvetica, Arial, sans-serif">
<rect x="0" y="0" width="1200" height="116" fill="#ffffff"/>
<text x="12.00" y="26.00" fill="#1a1a1a" font-size="14" text-anchor="start">igv-rs snapshot</text>
<text x="1188.00" y="26.00" fill="#888888" font-size="12" text-anchor="end">chr1:1-1000</text>
<line x1="80.00" y1="66.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<line x1="300.71" y1="62.00" x2="300.71" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="300.71" y="60.00" fill="#444444" font-size="10" text-anchor="middle">200</text>
<line x1="522.53" y1="62.00" x2="522.53" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="522.53" y="60.00" fill="#444444" font-size="10" text-anchor="middle">400</text>
<line x1="744.36" y1="62.00" x2="744.36" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="744.36" y="60.00" fill="#444444" font-size="10" text-anchor="middle">600</text>
<line x1="966.18" y1="62.00" x2="966.18" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="966.18" y="60.00" fill="#444444" font-size="10" text-anchor="middle">800</text>
<line x1="1188.00" y1="62.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="1188.00" y="60.00" fill="#444444" font-size="10" text-anchor="middle">1,000</text>
<text x="74.00" y="98.00" fill="#888888" font-size="10" text-anchor="end">genes.gtf</text>
<line x1="189.80" y1="94.00" x2="633.45" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="215.80" y1="91.00" x2="219.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="215.80" y1="97.00" x2="219.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="245.80" y1="91.00" x2="249.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="245.80" y1="97.00" x2="249.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="275.80" y1="91.00" x2="279.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="275.80" y1="97.00" x2="279.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="305.80" y1="91.00" x2="309.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="305.80" y1="97.00" x2="309.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="335.80" y1="91.00" x2="339.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="335.80" y1="97.00" x2="339.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="365.80" y1="91.00" x2="369.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="365.80" y1="97.00" x2="369.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="395.80" y1="91.00" x2="399.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="395.80" y1="97.00" x2="399.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="425.80" y1="91.00" x2="429.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="425.80" y1="97.00" x2="429.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="455.80" y1="91.00" x2="459.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="455.80" y1="97.00" x2="459.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="485.80" y1="91.00" x2="489.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="485.80" y1="97.00" x2="489.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="515.80" y1="91.00" x2="519.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="515.80" y1="97.00" x2="519.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="545.80" y1="91.00" x2="549.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="545.80" y1="97.00" x2="549.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="575.80" y1="91.00" x2="579.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="575.80" y1="97.00" x2="579.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="605.80" y1="91.00" x2="609.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="605.80" y1="97.00" x2="609.80" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<rect x="189.80" y="84.40" width="110.91" height="19.20" fill="#1f3b73"/>
<rect x="522.53" y="84.40" width="110.91" height="19.20" fill="#1f3b73"/>
<text x="411.62" y="88.00" fill="#1a1a1a" font-size="10" text-anchor="middle">GENE1</text>
<line x1="744.36" y1="94.00" x2="966.18" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="778.36" y1="91.00" x2="774.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="778.36" y1="97.00" x2="774.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="808.36" y1="91.00" x2="804.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="808.36" y1="97.00" x2="804.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="838.36" y1="91.00" x2="834.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="838.36" y1="97.00" x2="834.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="868.36" y1="91.00" x2="864.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="868.36" y1="97.00" x2="864.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="898.36" y1="91.00" x2="894.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="898.36" y1="97.00" x2="894.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="928.36" y1="91.00" x2="924.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="928.36" y1="97.00" x2="924.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="958.36" y1="91.00" x2="954.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<line x1="958.36" y1="97.00" x2="954.36" y2="94.00" stroke="#777777" stroke-width="1.00"/>
<rect x="744.36" y="84.40" width="221.82" height="19.20" fill="#1f3b73"/>
<text x="855.27" y="88.00" fill="#1a1a1a" font-size="10" text-anchor="middle">GENE2</text>
</svg>
