crates/igv-render/tests/snapshots/svg_snapshots__coverage_only_one_bam_two_reads.snap
---
source: crates/igv-render/tests/svg_snapshots.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="324" viewBox="0 0 1200 324" font-family="DejaVu Sans, Liberation Sans, Helvetica, Arial, sans-serif">
<rect x="0" y="0" width="1200" height="324" fill="#ffffff"/>
<text x="12.00" y="26.00" fill="#1a1a1a" font-size="14" text-anchor="start">igv-rs snapshot</text>
<text x="1188.00" y="26.00" fill="#888888" font-size="12" text-anchor="end">chr1:1-100</text>
<line x1="80.00" y1="66.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<line x1="292.65" y1="62.00" x2="292.65" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="292.65" y="60.00" fill="#444444" font-size="10" text-anchor="middle">20</text>
<line x1="516.48" y1="62.00" x2="516.48" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="516.48" y="60.00" fill="#444444" font-size="10" text-anchor="middle">40</text>
<line x1="740.32" y1="62.00" x2="740.32" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="740.32" y="60.00" fill="#444444" font-size="10" text-anchor="middle">60</text>
<line x1="964.16" y1="62.00" x2="964.16" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="964.16" y="60.00" fill="#444444" font-size="10" text-anchor="middle">80</text>
<line x1="1188.00" y1="62.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="1188.00" y="60.00" fill="#444444" font-size="10" text-anchor="middle">100</text>
<text x="74.00" y="120.00" fill="#888888" font-size="10" text-anchor="end">coverage</text>
<rect x="179.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="190.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="201.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="212.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="224.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="235.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="246.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="257.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="268.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="279.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="290.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="301.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="312.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="323.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="334.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="345.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="357.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="368.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="379.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="390.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="401.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="412.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="423.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="434.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="445.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="456.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="467.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="478.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="489.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="501.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="512.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="523.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="534.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="545.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="556.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="567.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="578.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="589.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="600.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="611.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="622.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="634.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="645.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="656.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="667.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="678.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="689.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="700.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="711.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="722.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="733.00" y="78.00" width="1.00" height="76.00" fill="#888888"/>
<rect x="744.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="755.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="766.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="778.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="789.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="800.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="811.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="822.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="833.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="844.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="855.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="866.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="877.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="888.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="899.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="911.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="922.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="933.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="944.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<rect x="955.00" y="116.00" width="1.00" height="38.00" fill="#888888"/>
<text x="74.00" y="86.00" fill="#888888" font-size="10" text-anchor="end">max 2</text>
<text x="74.00" y="170.00" fill="#888888" font-size="10" text-anchor="end">sample.bam</text>
<polygon points="180.73,161.00 747.52,161.00 751.52,166.00 747.52,171.00 180.73,171.00" fill="#9ec3e0"/>
<polygon points="404.57,173.00 971.35,173.00 975.35,178.00 971.35,183.00 404.57,183.00" fill="#9ec3e0"/>
</svg>
