crates/igv-render/tests/snapshots/svg_snapshots__signal_only_one_bigwig.snap
---
source: crates/igv-render/tests/svg_snapshots.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="160" viewBox="0 0 1200 160" font-family="DejaVu Sans, Liberation Sans, Helvetica, Arial, sans-serif">
<rect x="0" y="0" width="1200" height="160" fill="#ffffff"/>
<text x="12.00" y="26.00" fill="#1a1a1a" font-size="14" text-anchor="start">igv-rs snapshot</text>
<text x="1188.00" y="26.00" fill="#888888" font-size="12" text-anchor="end">chr1:1-1000</text>
<line x1="80.00" y1="66.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<line x1="300.71" y1="62.00" x2="300.71" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="300.71" y="60.00" fill="#444444" font-size="10" text-anchor="middle">200</text>
<line x1="522.53" y1="62.00" x2="522.53" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="522.53" y="60.00" fill="#444444" font-size="10" text-anchor="middle">400</text>
<line x1="744.36" y1="62.00" x2="744.36" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="744.36" y="60.00" fill="#444444" font-size="10" text-anchor="middle">600</text>
<line x1="966.18" y1="62.00" x2="966.18" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="966.18" y="60.00" fill="#444444" font-size="10" text-anchor="middle">800</text>
<line x1="1188.00" y1="62.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="1188.00" y="60.00" fill="#444444" font-size="10" text-anchor="middle">1,000</text>
<text x="74.00" y="120.00" fill="#888888" font-size="10" text-anchor="end">chip.bw</text>
<rect x="80.00" y="122.33" width="221.82" height="31.67" fill="#1f4e79"/>
<rect x="301.82" y="78.00" width="221.82" height="76.00" fill="#1f4e79"/>
<rect x="523.64" y="135.00" width="221.82" height="19.00" fill="#1f4e79"/>
<rect x="745.47" y="100.17" width="221.82" height="53.83" fill="#1f4e79"/>
<rect x="967.29" y="144.50" width="220.71" height="9.50" fill="#1f4e79"/>
<text x="74.00" y="86.00" fill="#888888" font-size="10" text-anchor="end">max 12.00</text>
</svg>
