crates/igv-render/tests/snapshots/svg_snapshots__variants_only_three_records.snap
---
source: crates/igv-render/tests/svg_snapshots.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="104" viewBox="0 0 1200 104" font-family="DejaVu Sans, Liberation Sans, Helvetica, Arial, sans-serif">
<rect x="0" y="0" width="1200" height="104" fill="#ffffff"/>
<text x="12.00" y="26.00" fill="#1a1a1a" font-size="14" text-anchor="start">igv-rs snapshot</text>
<text x="1188.00" y="26.00" fill="#888888" font-size="12" text-anchor="end">chr1:1-1000</text>
<line x1="80.00" y1="66.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<line x1="300.71" y1="62.00" x2="300.71" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="300.71" y="60.00" fill="#444444" font-size="10" text-anchor="middle">200</text>
<line x1="522.53" y1="62.00" x2="522.53" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="522.53" y="60.00" fill="#444444" font-size="10" text-anchor="middle">400</text>
<line x1="744.36" y1="62.00" x2="744.36" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="744.36" y="60.00" fill="#444444" font-size="10" text-anchor="middle">600</text>
<line x1="966.18" y1="62.00" x2="966.18" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="966.18" y="60.00" fill="#444444" font-size="10" text-anchor="middle">800</text>
<line x1="1188.00" y1="62.00" x2="1188.00" y2="66.00" stroke="#888888" stroke-width="1.00"/>
<text x="1188.00" y="60.00" fill="#444444" font-size="10" text-anchor="middle">1,000</text>
<polygon points="353.17,91.00 359.17,91.00 356.17,85.00" fill="#c0392b"/>
<polygon points="741.36,91.00 747.36,91.00 744.36,85.00" fill="#7d3c98"/>
<polygon points="1074.09,91.00 1080.09,91.00 1077.09,85.00" fill="#c0392b"/>
</svg>
